--- a/indago.properties
+++ b/indago.properties
@@ -1,7 +1,8 @@
 #Indago properties
-#Tue Nov 26 10:45:41 CET 2013
-GUI_POS_X=1115
-DIVIDER_LOCATION=511
-GUI_WIDTH=1200
-GUI_HEIGHT=849
-GUI_POS_Y=425
+#Tue Nov 26 20:30:25 CET 2013
+GUI_POS_X=292
+VERTICAL_DIVIDER_LOCATION=393
+GUI_WIDTH=1595
+HORIZONTAL_DIVIDER_LOCATION=500
+GUI_HEIGHT=1094
+GUI_POS_Y=89
