--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>1.28</version>
+		<version>1.107</version>
 	</parent>
 
 	<groupId>com.jug</groupId>
@@ -18,6 +18,11 @@
 	<description>Latin: indago (verb) - track, spoor, smell out, nose, trace, dog.</description>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.scijava</groupId>
+			<artifactId>scijava-common</artifactId>
+			<version>2.5.1-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
