add imglib2 dependency

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<version>${imagej1.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2</artifactId>
+			<version>${imglib2.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sf.jung</groupId>
 			<artifactId>jung2</artifactId>
 			<version>2.0.1</version>
