--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.scijava</groupId>
-		<artifactId>pom-scijava</artifactId>
-		<version>3.6</version>
+		<groupId>net.imagej</groupId>
+		<artifactId>pom-imagej</artifactId>
+		<version>5.2.0</version>
 	</parent>
 
 	<groupId>com.jug</groupId>
@@ -18,23 +18,17 @@
 	<description>Latin: indago (verb) - track, spoor, smell out, nose, trace, dog.</description>
 
 	<properties>
-		<imglib2.version>2.0.0-SNAPSHOT</imglib2.version>
 		<jung2.version>2.0.1</jung2.version>
 	</properties>
 
 	<dependencies>
-<!-- 		<dependency>
-			<groupId>net.imagej</groupId>
-			<artifactId>ij</artifactId>
-			<version>${imagej1.version}</version>
-		</dependency>
- -->		<dependency>
+		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
-			<artifactId>imglib2-algorithms</artifactId>
+			<artifactId>imglib2-algorithm</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
