--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,8 @@
 		</dependency>
 		<dependency>
 			<groupId>nz.ac.waikato.cms.weka</groupId>
-			<artifactId>weka-stable</artifactId>
-			<version>3.6.12</version>
+			<artifactId>weka-dev</artifactId>
+			<version>3.7.12</version>
 		</dependency>
 	</dependencies>
 
