--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
-		<version>5.3.0</version>
+		<version>5.12.0</version>
 	</parent>
 
 	<groupId>com.jug</groupId>
@@ -46,6 +46,11 @@
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-ui</artifactId>
 			<version>2.0.0-beta-29-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>spim_data</artifactId>
+			<version>1.0.0-beta-6</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
