--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -11,8 +8,8 @@
 		<version>14.4.1</version>
 	</parent>
 
-	<groupId>com.jug</groupId>
-	<artifactId>Indago_</artifactId>
+	<groupId>com.indago</groupId>
+	<artifactId>Indago</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
 	<description>Latin: indago (verb) - track, spoor, smell out, nose, trace, dog.</description>
@@ -20,7 +17,6 @@
 	<properties>
 		<jung2.version>2.0.1</jung2.version>
 		<scijava.jvm.version>1.8</scijava.jvm.version>
-		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<dependencies>
@@ -74,9 +70,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>InteractiveDisplay</groupId>
-			<artifactId>InteractiveDisplay</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>com.indago</groupId>
+			<artifactId>iddea</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
@@ -117,24 +113,14 @@
 		</developer>
 	</developers>
 
-	<!-- NB: for project parent -->
 	<repositories>
 		<repository>
-			<id>imagej.releases</id>
-			<url>http://maven.imagej.net/content/repositories/releases</url>
+			<id>imagej.public</id>
+			<url>http://maven.imagej.net/content/groups/public</url>
 		</repository>
 		<repository>
-			<id>imagej.snapshots</id>
-			<url>http://maven.imagej.net/content/repositories/snapshots</url>
+			<id>erichseifert.de</id>
+			<url>http://mvn.erichseifert.de/maven2</url>
 		</repository>
 	</repositories>
-
-	<!-- <scm>
-		<connection>scm:git:git://github.com/imagej/minimal-ij1-plugin</connection>
-		<developerConnection>scm:git:git@github.com:imagej/minimal-ij1-plugin</developerConnection>
-		<tag>HEAD</tag>
-		<url>https://github.com/imagej/minimal-ij1-plugin</url>
-	</scm> -->
-
-	<name>plugins/Indago/Indago.jar</name>
 </project>
