Added gurobi.jar + updated POM

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
 			<artifactId>weka-dev</artifactId>
 			<version>3.7.12</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>gurobi.com</groupId>
+			<artifactId>gurobi.jar</artifactId>
+			<version>6.5.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/lib/gurobi.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<developers>
