--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
 
 	<dependencies>
 		<dependency>
+  			<groupId>org.scijava</groupId>
+  			<artifactId>scijava-log-slf4j</artifactId>
+		</dependency>		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
 		</dependency>
