--- a/pom.xml
+++ b/pom.xml
@@ -22,15 +22,10 @@
 
 	<dependencies>
 		<dependency>
-  			<groupId>org.scijava</groupId>
-  			<artifactId>scijava-log-slf4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-
+			<groupId>com.indago</groupId>
+			<artifactId>IndagoLoggingWrapper</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>	
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2</artifactId>
