--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
-		<version>15.8.0</version>
+		<version>16.6.0</version>
 	</parent>
 
 	<properties>
@@ -51,11 +51,6 @@
 			<groupId>sc.fiji</groupId>
 			<artifactId>spim_data</artifactId>
 			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>bigdataviewer-core</artifactId>
-			<version>2.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imglib2</groupId>
@@ -105,15 +100,15 @@
 			<groupId>mpicbg</groupId>
 			<artifactId>mpicbg</artifactId>
 		</dependency>
-		<dependency>
+ 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-vistools</artifactId>
-			<version>1.0.0-beta-4-SNAPSHOT</version>
+			<version>1.0.0-beta-3</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-			<version>2.5.2-SNAPSHOT</version>
+			<version>2.4.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
