--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,37 @@
 	<parent>
 		<groupId>sc.fiji</groupId>
 		<artifactId>pom-indago</artifactId>
-		<version>1.0.4-SNAPSHOT</version>
+		<version>2.0.1</version>
 	</parent>
 
 	<properties>
-		<enforcer.skip>true</enforcer.skip> <!-- -->
+		<!-- <enforcer.skip>true</enforcer.skip> -->
 		<jung2.version>2.0.1</jung2.version>
 		<scijava.jvm.version>1.8</scijava.jvm.version>
+
+		<license.licenseName>bsd_2</license.licenseName>
+		<license.copyrightOwners>TrNdy developers</license.copyrightOwners>
 	</properties>
 
 	<groupId>com.indago</groupId>
 	<artifactId>Indago</artifactId>
 	<version>0.1.1-SNAPSHOT</version>
 
+	<name>indago</name>
 	<description>indigare (ital.) - investigate.</description>
+	<url>https:github.com/TrNdy/indago</url>
+	<inceptionYear>2013</inceptionYear>
+	<organization>
+		<name>TrNdy</name>
+		<url>https://github.com/TrNdy</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Simplified BSD License</name>
+			<url>https://opensource.org/licenses/BSD-2-Clause</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<dependencies>
 		<dependency>
@@ -77,10 +94,6 @@
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-vistools</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>bigdataviewer-core</artifactId>
-		</dependency>
 	</dependencies>
 
 	<developers>
@@ -92,7 +105,7 @@
 			<organization>MPI-CBG</organization>
 			<organizationUrl>http://www.mpi-cbg.de/</organizationUrl>
 			<roles>
-				<role>postdoc</role>
+				<role>developer</role>
 			</roles>
 			<timezone>+1</timezone>
 		</developer>
@@ -104,12 +117,38 @@
 			<organization>MPI-CBG</organization>
 			<organizationUrl>http://www.mpi-cbg.de/</organizationUrl>
 			<roles>
-				<role>architect</role>
 				<role>developer</role>
 			</roles>
 			<timezone>+1</timezone>
 		</developer>
 	</developers>
+	<contributors>
+		<contributor>
+			<name>none</name>
+		</contributor>
+	</contributors>
+
+	<mailingLists>
+		<mailingList>
+			<name>none</name>
+		</mailingList>
+	</mailingLists>
+
+	<scm>
+		<connection>scm:git:git://github.com/TrNdy/indago</connection>
+		<developerConnection>scm:git:git@github.com:TrNdy/indago</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/TrNdy/indago</url>
+	</scm>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/TrNdy/indago/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis CI</system>
+		<url>https://travis-ci.org/TrNdy/indago</url>
+	</ciManagement>
+
 
 	<repositories>
 		<repository>
