--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.indago</groupId>
-			<artifactId>ui-elements</artifactId>
+			<artifactId>indago-ui-elements</artifactId>
+			<version>0.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.indago</groupId>
