--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -20,7 +19,7 @@
 
 	<groupId>com.indago</groupId>
 	<artifactId>Indago</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 
 	<name>indago</name>
 	<description>indigare (ital.) - investigate.</description>
@@ -138,7 +137,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/TrNdy/indago</connection>
 		<developerConnection>scm:git:git@github.com:TrNdy/indago</developerConnection>
-		<tag>HEAD</tag>
+		<tag>Indago-0.1.1</tag>
 		<url>https://github.com/TrNdy/indago</url>
 	</scm>
 	<issueManagement>
