POM: deploy releases to the ImageJ repository

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 
 		<license.licenseName>bsd_2</license.licenseName>
 		<license.copyrightOwners>TrNdy developers</license.copyrightOwners>
+
+		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
+		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 	</properties>
 
 	<groupId>com.indago</groupId>
