--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>com.indago</groupId>
 	<artifactId>Indago</artifactId>
-	<version>0.1.4-SNAPSHOT</version>
+	<version>0.1.4</version>
 
 	<name>indago</name>
 	<description>indigare (ital.) - investigate.</description>
@@ -123,7 +123,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/TrNdy/indago</connection>
 		<developerConnection>scm:git:git@github.com:TrNdy/indago</developerConnection>
-		<tag>HEAD</tag>
+		<tag>Indago-0.1.4</tag>
 		<url>https://github.com/TrNdy/indago</url>
 	</scm>
 	<issueManagement>
