Use swing version of miglayout
To be consistent with the current version in Fiji

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
 		<dependency>
 			<groupId>com.miglayout</groupId>
 			<artifactId>miglayout</artifactId>
+			<classifier>swing</classifier>
 		</dependency>
 
 		<!-- Test dependencies -->
