--- a/pom.xml
+++ b/pom.xml
@@ -152,11 +152,11 @@
 	<repositories>
 		<repository>
 			<id>imagej.public</id>
-			<url>http://maven.scijava.org/content/groups/public</url>
+			<url>https://maven.scijava.org/content/groups/public</url>
 		</repository>
 		<repository>
 			<id>erichseifert.de</id>
-			<url>http://mvn.erichseifert.de/maven2</url>
+			<url>https://mvn.erichseifert.de/maven2</url>
 		</repository>
 	</repositories>
 </project>
